Hotfix: label names fixed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         max="500"
       />
       <label for="neuronsConnections" id="neuronsConnectionsLabel"
-        >Liczba Połączeń</label
+        >Liczba połączeń</label
       >
       <input
         type="range"
